# solidity-sentinel-agent

./: .env.example  .gitignore  .gitmodules  MEMO.md  README.md  SOLIDITY_SENTINEL_ARCHITECTURE_AND_AUDIT_REVIEW.md  pyproject.toml
benchmarks/hawk_high/: expected_findings.json
cache/: solidity-files-cache.json
evals/ground_truth/: flexible-vaults.json  hawk-high.json  sentiment-v2.json
evals/rag/: hawk-high-rag-eval.json
src/sentinel/: __init__.py  artifacts.py  cli.py  config.py  errors.py  evidence.py  reporting.py  state.py
tests/: conftest.py
tests/integration/: test_astra_vault_eval.py  test_eval_runner.py  test_llm_graph_planner.py  test_parent_graph.py  test_rag_embedding_eval_integration.py
tests/unit/: test_adversarial_review.py  test_anthropic_provider.py  test_audit_quality_regressions.py  test_auditvault_ingest.py  test_config.py  test_cross_contract_evidence.py  test_detector_precision.py  test_evidence_gating.py  test_executor.py  test_exploit_dsl.py  test_function_ranges.py  test_graph_reachability.py  test_hypothesis_proposer.py  test_hypothesis_ranking.py  test_initial_tools.py  test_invariant_mining.py  test_llm_providers.py  test_protocol_ir.py  test_rag.py  test_rag_embedding_eval.py  test_rag_index_metadata.py  test_real_solidity_tools.py  test_realized_tools.py  test_recall_benchmark.py  test_registry.py  test_reporting.py  test_research_subgraph.py  test_resilience.py  test_robustness_fixes.py  test_schemas.py  test_security_hardening.py  test_self_rag.py  test_semantic_validation.py  test_solodit_checklist.py  test_state.py  (+5 more)
(+88 files in other folders)
