[project]
name = "solidity-sentinel-agent"
version = "0.1.0"
description = "LangGraph/LangChain autonomous agent for real Solidity repository triage."
requires-python = ">=3.12"
dependencies = [
  "langgraph>=1.2",
  "langchain>=1.3",
  "langchain-core>=1.4",
  "langchain-community>=0.4",
  "langchain-ollama>=1.1",
  "langchain-huggingface>=1.2",
  "langchain-chroma>=1.0",
  "pydantic>=2.13",
  "typer>=0.25",
  "pytest>=9.0",
  "structlog>=25.5",
  "tenacity>=9.1",
  "rich>=15.0",
  "httpx>=0.28",
  "chromadb>=1.3",
  "langsmith>=0.4",
  "huggingface-hub>=1.17",
  "transformers>=5.9",
  "accelerate>=1.13",
  "sentence-transformers>=5.5",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[build-system]
requires = ["setuptools>=81", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
